// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs horizontal renders correctly 1`] = `
<div>
  <ul class="uk-tab">
    <li class="uk-active">
      <a>Tab 1</a>
    </li>
    <li class="uk-disabled">
      <a>Tab 2</a>
    </li>
    <li><a></a></li>
  </ul>
  <div>
    <div>Content Tab 1</div>
  </div>
</div>
`;

exports[`Tabs vertical renders correctly 1`] = `
<div class="uk-grid">
  <div class="uk-width-auto">
    <ul class="uk-tab uk-tab-left">
      <li class="uk-active">
        <a>Tab 1</a>
      </li>
      <li class="uk-disabled">
        <a>Tab 2</a>
      </li>
      <li><a></a></li>
    </ul>
  </div>
  <div class="uk-width-expand">
    <div>Content Tab 1</div>
  </div>
</div>
`;
